# aster-quant-trading-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes.py  websocket.py
backend/app/core/: config.py  security.py
backend/app/domain/: models.py
backend/app/services/: analytics.py  backtest.py  execution.py  market_data.py  portfolio.py  risk.py  strategy.py
backend/tests/: test_risk.py
docs/: architecture.md  operations.md  security.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chart-panel.tsx  metric-tile.tsx  order-book.tsx  risk-dashboard.tsx  strategy-console.tsx  top-bar.tsx  watchlist.tsx
frontend/lib/: mock-snapshot.ts  types.ts  use-terminal-stream.ts
frontend/store/: terminal-store.ts
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/k8s/: backend.yaml  config.yaml  frontend.yaml  ingress.yaml  namespace.yaml
infra/monitoring/: prometheus-rules.yaml
infra/nginx/: nginx.conf
